--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
- <head> This is an Automated Webpage -- Version:1 </head>
-
- <body bgcolor="yellow"> Welcome and Congratulation!!! The webpage is successfully launched with Jenkins Automation </body>
+ <head> This is an Automated Webpage -- Version:2 </head>
+ <body bgcolor="pink"> Welcome and Congratulation!!! The webpage is successfully launched with Jenkins Automation </body>
 </html>
